standardize implementation of z-index layers, fix name encoding on arts era view

--- a/src/app/globalHeader/globalHeader.component.less
+++ b/src/app/globalHeader/globalHeader.component.less
@@ -8,7 +8,6 @@ header {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1000;
 
     .globalContainer {
       h1 {
