--- a/src/app/globalView/artsView/artsDisplay/artsDisplay.component.less
+++ b/src/app/globalView/artsView/artsDisplay/artsDisplay.component.less
@@ -59,7 +59,6 @@
             top: 0px;
             height: 100%;
             width: 45px;
-            z-index: 1000;
             transition: all @defaultTransitionTimeout;
 
             .glyphicon {
