--- a/src/app/sharedComponents/artCarousel/artCarousel.component.less
+++ b/src/app/sharedComponents/artCarousel/artCarousel.component.less
@@ -15,7 +15,7 @@
     top: 0px;
     height: 85px;
     width: 30px;
-    z-index: 1000;
+    z-index: @modalBase;
     transition: all @defaultTransitionTimeout;
 
     .glyphicon {
